# GodotConcept

./: .gitignore  .watchcode.yaml  Cargo.toml  CharacterTexture.gd  CharacterTexture.tscn  Enemy.gd  Enemy.tscn  Main.gd  Main.tscn  Player.gd  TestScene02.gd  TestScene02.tscn  Utils.gd  World.gd  project.godot  rnlib.gdnlib
dev_projects/fragment_shaders_1/: Main.tscn  fragment.shader  fragment.tres
dev_projects/fragment_shaders_2/: Main.tscn  fragment.shader  fragment.tres  icon.gd
dev_projects/js_poly_tests/: .gitignore  converter.js  converter_w8r.js  debug_martinez_102.js  debug_martinez_103.js  debug_martinez_110_polybool.js  debug_martinez_110_w8r.js  debug_polybool_holes.js  debug_standalone.js  demo.js  package.json  run_polygon_union.js
dev_projects/light_shaders_1/: Main.tscn
dev_projects/line_drawing/: Main.tscn  MeshInstance2D.gd  white_1x1.png.import
dev_projects/viewport_screen_reading/: Main.tscn  icon.gd
geo-clip/: .gitignore  Cargo.toml
geo-clip/src/: epsilon.rs  lib.rs  main.rs  playground.rs  segment.rs  sweep_event.rs
resources/: Mono50.tres
scenes/: CharacterTexture.gd  CharacterTexture.tscn  DamagePoint.gd  DamagePoint.tscn  DamagePointLauncher.gd  DebugNode2D.tscn  Enemy.gd  Enemy.tscn  FloorTexture.gd  Main.gd  Main.tscn  Player.gd  PolygonRenderer.gd  PolygonRenderer.tscn  RustWorld.gdns  Utils.gd  Weapon.tscn  World.gd
scenes/tests/: PolygonTest.tscn  (+7 more)
scripts/: plot_world.py
src/: converters.rs  lib.rs  vec2.rs  world_gen.rs
textures/: caster.png.import  character.xcf  character_at.png.import  white_1x1.png.import
(+1 files in other folders)
